Revision history for File-Map

{{$NEXT}}

0.56      2012-12-20 23:49:14 Europe/Amsterdam
          Don't run threading tests with tainting #82017
          Actually use ppport.h #82017

0.55      2012-12-14 14:04:49 Europe/Amsterdam
          Fix SV_CHECK_THINKFIRST_COW_DROP on 5.8.x

0.54      2012-12-13 23:47:47 Europe/Amsterdam
          Deal better with copy-on-write
          Remove Const::Fast dependency

0.53      2012-11-07 11:45:09 Europe/Amsterdam
          Switch to Sub::Exporter::Progressive
          Moved protection flags into XS

0.52      2012-07-17 18:10:48 Europe/Bucharest
          It's called HAS_STRERROR_R and not HAVE_STRERROR_R
          Make sure pTHX is available for sterror (5.8.7 compatibility)

0.51      2012-06-13 21:06:41 Europe/Amsterdam
          Remove threads.pm from dependencies
          Disable pin and unpin on VMS
          Enable compilation with -Werror=format-security

0.50      2012-05-01 22:37:41 Europe/Amsterdam
          Fix building on threadless Linux

0.49      2012-04-26 00:06:36 Europe/Amsterdam
          Revert to old error code on Windows

0.48      2012-04-23 02:27:01 Europe/Amsterdam
          Fix madvice on old cygwin versions
          Made strerror_r/strerror_s usage more robust

0.47      2012-04-04 23:17:55 Europe/Amsterdam
          Restore fileno in sys_map; this fixes #76253: non-anonymous sys_map was useable since e102d034
          Switch to using PodWeaver

0.46      2012-02-26 17:59:33 Europe/Amsterdam
          Fix madvise on cygwin
          Disable advise on VMS
          Add mergeable and unmergeable advices for Linux

0.45      2012-02-22 20:17:29 Europe/Amsterdam
          Replace round() by floor() + 0.5. The former is C99, the latter in C89...
          Test a bit more leniently on perl 5.8.7

0.44      2012-01-27 14:27:27 Europe/Amsterdam
          Fixed use of BITS32_MASK on Windows

0.43      2012-01-27 12:42:27 Europe/Amsterdam